--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
 
   <link rel="stylesheet" type="text/css" href="style.css">
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
 
 </head>
 <body background="background.jpg">
@@ -17,30 +19,20 @@
 
 <center>
   	<h3 class=" btn btn-warning heading">☬Don☬DJ☬<br>
-	    <span class="notee">NOTE - Move your left-hand wrist up and down for increasing and decreasing the volume. 
-        Move your right-hand wrist up and down for increasing and decreasing the speed</span>
+	    <span class="notee">NOTE - Get your left-hand wrist in front of the webcam to play one song.
+         Get your right-hand wrist in front of the webcam to play Other Song.</span>
   	</h3>
     <div class="div_speedee">
 
       <img class="div_speedee_imagee" src="disk.gif"><br>
 
-      <h3 class="btn btn-danger" id="speedee">
-
-        Speed
-
-      </h3>
-
+     
     </div>
     <div class="div_volumee">
 
       <img class="div_volumee_imagee" src="disk.gif"><br>
 
-      <h3 class="btn btn-danger" id="volumee">
-
-        Volume
-
-      </h3>
-
+      
     </div>
 	<br><br>
 </center>
