--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 <body background="background.jpg">
 
 
+
 <center>
   	<h3 class=" btn btn-warning heading">☬Don☬DJ☬<br>
 	    <span class="notee">NOTE - Get your left-hand wrist in front of the webcam to play one song.
          Get your right-hand wrist in front of the webcam to play Other Song.</span>
   	</h3>
+    <h2 id="name"></h2>
     <div class="div_speedee">
 
       <img class="div_speedee_imagee" src="disk.gif"><br>
